force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/HDT_MatriceSocietaVendita__mdt.object-meta.xml
<CustomObject>
    <label>Matrice Società Vendita</label>
    <pluralLabel>Matrice Società Vendita</pluralLabel>
</CustomObject>