force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/Comune__c.field-meta.xml
<CustomField>
    <fullName>Comune__c</fullName>
    <label>Comune</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
                <default>true</default>
                <label>HCM</label>
            </value>
            <value>
                <fullName>EENE</fullName>
            </value>
            <value>
                <fullName>ALTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>