force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <label>Distributori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>