force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>