force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/Offerta__c.field-meta.xml
<CustomField>
    <fullName>Offerta__c</fullName>
    <label>Offerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTRO</fullName>
                <default>true</default>
                <label>ALTRO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>