force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <label>Codice Società Vendita</label>
    <length>20</length>
    <type>Text</type>
</CustomField>