force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/fields/SellerCompany__c.field-meta.xml
<CustomField>
    <fullName>SellerCompany__c</fullName>
    <label>Società Vendita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>