force-app/main/default/objects/HDT_MatriceSocietaVendita__mdt/listViews/All_Matrice_Societa_Vendita.listView-meta.xml
<ListView>
    <fullName>All_Matrice_Societa_Vendita</fullName>
    <columns>MasterLabel</columns>
    <columns>isActive__c</columns>
    <columns>SalesCompanyCode__c</columns>
    <columns>Comune__c</columns>
    <columns>distributor__c</columns>
    <columns>Marcatura__c</columns>
    <columns>Offerta__c</columns>
    <columns>Service__c</columns>
    <columns>SellerCompany__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Matrice Societa Vendita</label>
    <language>en_US</language>
</ListView>